FFM changes for java 22