@@ -1,3 +1,38 @@
+<!--  Copyright (c) 2024  Oracle and/or its affiliates.
+
+      The Universal Permissive License (UPL), Version 1.0
+
+      Subject to the condition set forth below, permission is hereby granted to any
+      person obtaining a copy of this software, associated documentation and/or data
+      (collectively the "Software"), free of charge and under any and all copyright
+      rights in the Software, and any and all patent rights owned or freely
+      licensable by each licensor hereunder covering either (i) the unmodified
+      Software as contributed to or provided by such licensor, or (ii) the Larger
+      Works (as defined below), to deal in both
+
+      (a) the Software, and
+      (b) any piece of software and/or hardware listed in the lrgrwrks.txt file if
+      one is included with the Software (each a "Larger Work" to which the Software
+      is contributed by such licensors),
+
+      without restriction, including without limitation the rights to copy, create
+      derivative works of, display, perform, and distribute the Software and make,
+      use, sell, offer for sale, import, export, have made, and have sold the
+      Software and the Larger Work(s), and to sublicense the foregoing rights on
+      either these or other terms.
+
+      This license is subject to the following condition:
+      The above copyright notice and either this complete permission notice or at
+      a minimum a reference to the UPL must be included in all copies or
+      substantial portions of the Software.
+
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+      IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+      FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+      AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+      LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+      OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+      SOFTWARE. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -44,10 +79,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.release>22</maven.compiler.release>
     <github.global.server>github</github.global.server>
-    <asm.version>9.2</asm.version>
+    <asm.version>9.5</asm.version>
     <make>make</make>
   </properties>
 
@@ -119,7 +153,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.10.1</version>
+        <configuration>
+          <release>22</release>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -145,7 +182,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.3.7</version>
+        <version>5.1.4</version>
         <configuration>
           <instructions>
             <_nouses>true</_nouses>
@@ -181,6 +218,7 @@
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
+          <argLine>--enable-native-access=ALL-UNNAMED -Djnr.ffi.compile.checks=true</argLine>
           <systemProperties combine.children="append">
             <property>
               <name>jnr.ffi.library.path</name>
@@ -224,7 +262,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.4.0</version>
         <executions>
           <execution>
             <id>attach-javadocs</id>
@@ -312,15 +350,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-    <profile>
-      <id>java9</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <properties>
-        <maven.compiler.release>8</maven.compiler.release>
-      </properties>
     </profile>
   </profiles>
   <reporting>
